syntax = "proto3";
package gateway;

option go_package = "gateway";

import "github.com/baudtime/baudtime/msg/pb/pb.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message InstantQueryRequest {
    string time = 1;
    string timeout = 2;
    string query = 3;
}

message RangeQueryRequest {
    string start = 1;
    string end = 2;
    string step = 3;
    string timeout = 4;
    string query = 5;
}

message QueryResponse {
    string result = 1;
    pb.StatusCode status = 2;
    string errorMsg = 3;
}

message AddRequest {
    repeated pb.Series series = 1;
}

message LabelValuesRequest {
    string name = 1;
    string constraint = 2;
    string timeout = 3;
}