syntax = "proto3";
package pb;

option go_package = "pb";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

enum StatusCode {
    Succeed = 0;
    Failed = 1;
}

message Label {
    string name = 1;
    string value = 2;
}

message Point {
    sint64 T = 1;
    double V = 2;
}

message Series {
    repeated Label labels = 1 [(gogoproto.nullable) = false];
    repeated Point points = 2 [(gogoproto.nullable) = false];
}

message LabelValuesResponse {
    repeated string values = 1;
    pb.StatusCode status = 2;
    string errorMsg = 3;
}

message GeneralResponse {
    StatusCode status = 1;
    string message = 2;
}